--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,5 @@
-== README
+This dashboard started as a project in my free time. The automation reports we had was in plain html format and viewing the weekly reports was becoming a problem,due to this I came up with this dashboard. It was very well accepted among the team and is hosted internally. The minimal demo version I have hosted on heroku.
+The Demo version is accessible on :
+https://automationreportsdashboard.herokuapp.com
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+This repo is not maintained.
